--- a/frontend/mono-ui/web/rainmaker/packages/employee/package.json
+++ b/frontend/mono-ui/web/rainmaker/packages/employee/package.json
@@ -83,7 +83,7 @@
     "start-js": "react-scripts start",
     "start": "run-p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "npm i && run-s build-css build-js",
+    "build": "yarn run-s build-css build-js",
     "prettier": "prettier --write \"src/**/*.js\"",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
